--- a/style/tabs.css
+++ b/style/tabs.css
@@ -6,7 +6,7 @@
   }
   
   /* Style the buttons that are used to open the tab content */
-  .tab button, .tab input[type=checkbox] {
+  .tab button, .tab input[type=checkbox], .tab input[type=file] {
     background-color: inherit;
     float: left;
     border: none;
@@ -16,8 +16,9 @@
     transition: 0.3s;
   }
   
-  .tab input[type=checkbox] {
+  .tab input[type=checkbox], .tab input[type=file] {
     float: right;
+    padding: 10px 16px;
   }
   
   .tab:hover .on-tab-hover{
